fix: Errors alignment

--- a/slight-form-wizard/src/components/SlightFormWizard.css
+++ b/slight-form-wizard/src/components/SlightFormWizard.css
@@ -1,5 +1,6 @@
 .form-content-section {
   padding: 1.5rem 0;
+  text-align: left;
 }
 
 .form-content-section > .alert-card {
